<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WordFinder</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="title_activity_end_game">EndGameActivity</string>
    <string name="start_game_button">Start Game</string>
    <string name="preferences_button">Preferences</string>
    <string name="saved_games_button">Saved Games</string>
    <string name="statistics_button">Statistics</string>
    <string name="friends_button">Friends</string>
    <string name="title_activity_preferences">PreferencesActivity</string>
    <string name="ok_button">OK</string>
    <string name="play_again_button">Again</string>
    <string name="share_button">Share</string>
    <string name="quit_button">Quit</string>
    <string name="timer_time">00:00</string>
    <string name="save_Game">Save</string>
    <string name="title_activity_saved_games">SavedGamesActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_home">Wordfinder Game</string>
    <string name="cancel_button">Cancel</string>
    <string name="new_game_button">New</string>
    <string name="title_activity_view_saved_game">ViewSavedGameActivity</string>
    <string name="action_settings">Settings</string>
    <string name="replay_button">Replay</string>
    <string name="gameoverview">Game Overview</string>
    <string name="end_of_Game">End Of Game</string>
    <string name="saved_games">Saved Games</string>

</resources>
